--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,18 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.2.*"
+		"laravel/framework": "4.2.*",
+	  	"cartalyst/sentry":"^2.1",
+	  	"barryvdh/laravel-ide-helper": "~1.11"
 	},
 	"autoload": {
 		"classmap": [
 			"app/commands",
-			"app/controllers",
-			"app/models",
 			"app/database/migrations",
 			"app/database/seeds",
-			"app/tests/TestCase.php"
+			"app/database/orm",
+			"app/tests/TestCase.php",
+		  	"app/modules"
 		]
 	},
 	"scripts": {
@@ -23,6 +25,7 @@
 		],
 		"post-update-cmd": [
 			"php artisan clear-compiled",
+		 	"php artisan ide-helper:generate",
 			"php artisan optimize"
 		],
 		"post-create-project-cmd": [
